--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 blackjack-*.tar
 
-config/dev.exs
-config/test.exs
+/config/
 
 pubsub.ex
