--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 blackjack-*.tar
 
-/config/
+# Excluded config files
+/config/prod.exs
+/config/.env.prod
 
-pubsub.ex
